--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "prompt": "^1.0.0",
-    "ramda": "^0.23.0"
+    "ramda": "^0.23.0",
+    "telegram-mtproto": "^0.9.15"
   },
   "scripts": {
     "start": "node index.js"
